src/ts_api/treesitter.h


typedef uint16_t TSStateId;
typedef uint16_t TSSymbol;
typedef uint16_t TSFieldId;
typedef struct TSLanguage TSLanguage;
typedef struct TSParser TSParser;
typedef struct TSTree TSTree;
typedef struct TSQuery TSQuery;
typedef struct TSQueryCursor TSQueryCursor;
typedef struct TSLookaheadIterator TSLookaheadIterator;
typedef uint32_t (*DecodeFunction)(const uint8_t *string, uint32_t length,
                                   int32_t *code_point);
typedef enum TSInputEncoding {
  TSInputEncodingUTF8,
  TSInputEncodingUTF16LE,
  TSInputEncodingUTF16BE,
  TSInputEncodingCustom
} TSInputEncoding;
typedef enum TSSymbolType {
  TSSymbolTypeRegular,
  TSSymbolTypeAnonymous,
  TSSymbolTypeSupertype,
  TSSymbolTypeAuxiliary,
} TSSymbolType;
typedef struct TSPoint {
  uint32_t row;
  uint32_t column;
} TSPoint;
typedef struct TSRange {
  TSPoint start_point;
  TSPoint end_point;
  uint32_t start_byte;
  uint32_t end_byte;
} TSRange;
typedef struct TSInput {
  void *payload;
  const char *(*read)(void *payload, uint32_t byte_index, TSPoint position,
                      uint32_t *bytes_read);
  TSInputEncoding encoding;
  DecodeFunction decode;
} TSInput;
typedef struct TSParseState {
  void *payload;
  uint32_t current_byte_offset;
  bool has_error;
} TSParseState;
typedef struct TSParseOptions {
  void *payload;
  bool (*progress_callback)(TSParseState *state);
} TSParseOptions;
typedef enum TSLogType {
  TSLogTypeParse,
  TSLogTypeLex,
} TSLogType;
typedef struct TSLogger {
  void *payload;
  void (*log)(void *payload, TSLogType log_type, const char *buffer);
} TSLogger;
typedef struct TSInputEdit {
  uint32_t start_byte;
  uint32_t old_end_byte;
  uint32_t new_end_byte;
  TSPoint start_point;
  TSPoint old_end_point;
  TSPoint new_end_point;
} TSInputEdit;
typedef struct TSNode {
  uint32_t context[4];
  const void *id;
  const TSTree *tree;
} TSNode;
typedef struct TSTreeCursor {
  const void *tree;
  const void *id;
  uint32_t context[3];
} TSTreeCursor;
typedef struct TSQueryCapture {
  TSNode node;
  uint32_t index;
} TSQueryCapture;
typedef enum TSQuantifier {
  TSQuantifierZero = 0, 
  TSQuantifierZeroOrOne,
  TSQuantifierZeroOrMore,
  TSQuantifierOne,
  TSQuantifierOneOrMore,
} TSQuantifier;
typedef struct TSQueryMatch {
  uint32_t id;
  uint16_t pattern_index;
  uint16_t capture_count;
  const TSQueryCapture *captures;
} TSQueryMatch;
typedef enum TSQueryPredicateStepType {
  TSQueryPredicateStepTypeDone,
  TSQueryPredicateStepTypeCapture,
  TSQueryPredicateStepTypeString,
} TSQueryPredicateStepType;
typedef struct TSQueryPredicateStep {
  TSQueryPredicateStepType type;
  uint32_t value_id;
} TSQueryPredicateStep;
typedef enum TSQueryError {
  TSQueryErrorNone = 0,
  TSQueryErrorSyntax,
  TSQueryErrorNodeType,
  TSQueryErrorField,
  TSQueryErrorCapture,
  TSQueryErrorStructure,
  TSQueryErrorLanguage,
} TSQueryError;
typedef struct TSQueryCursorState {
  void *payload;
  uint32_t current_byte_offset;
} TSQueryCursorState;
typedef struct TSQueryCursorOptions {
  void *payload;
  bool (*progress_callback)(TSQueryCursorState *state);
} TSQueryCursorOptions;
typedef struct TSLanguageMetadata {
  uint8_t major_version;
  uint8_t minor_version;
  uint8_t patch_version;
} TSLanguageMetadata;
TSParser *ts_parser_new(void);
void ts_parser_delete(TSParser *self);
const TSLanguage *ts_parser_language(const TSParser *self);
bool ts_parser_set_language(TSParser *self, const TSLanguage *language);
bool ts_parser_set_included_ranges(TSParser *self, const TSRange *ranges,
                                   uint32_t count);
const TSRange *ts_parser_included_ranges(const TSParser *self, uint32_t *count);
TSTree *ts_parser_parse(TSParser *self, const TSTree *old_tree, TSInput input);
TSTree *ts_parser_parse_with_options(TSParser *self, const TSTree *old_tree,
                                     TSInput input,
                                     TSParseOptions parse_options);
TSTree *ts_parser_parse_string(TSParser *self, const TSTree *old_tree,
                               const char *string, uint32_t length);
TSTree *ts_parser_parse_string_encoding(TSParser *self, const TSTree *old_tree,
                                        const char *string, uint32_t length,
                                        TSInputEncoding encoding);
void ts_parser_reset(TSParser *self);
void ts_parser_set_timeout_micros(TSParser *self, uint64_t timeout_micros);
uint64_t ts_parser_timeout_micros(const TSParser *self);
void ts_parser_set_cancellation_flag(TSParser *self, const size_t *flag);
const size_t *ts_parser_cancellation_flag(const TSParser *self);
void ts_parser_set_logger(TSParser *self, TSLogger logger);
TSLogger ts_parser_logger(const TSParser *self);
void ts_parser_print_dot_graphs(TSParser *self, int fd);
TSTree *ts_tree_copy(const TSTree *self);
void ts_tree_delete(TSTree *self);
TSNode ts_tree_root_node(const TSTree *self);
TSNode ts_tree_root_node_with_offset(const TSTree *self, uint32_t offset_bytes,
                                     TSPoint offset_extent);
const TSLanguage *ts_tree_language(const TSTree *self);
TSRange *ts_tree_included_ranges(const TSTree *self, uint32_t *length);
void ts_tree_edit(TSTree *self, const TSInputEdit *edit);
TSRange *ts_tree_get_changed_ranges(const TSTree *old_tree,
                                    const TSTree *new_tree, uint32_t *length);
void ts_tree_print_dot_graph(const TSTree *self, int file_descriptor);
const char *ts_node_type(TSNode self);
TSSymbol ts_node_symbol(TSNode self);
const TSLanguage *ts_node_language(TSNode self);
const char *ts_node_grammar_type(TSNode self);
TSSymbol ts_node_grammar_symbol(TSNode self);
uint32_t ts_node_start_byte(TSNode self);
TSPoint ts_node_start_point(TSNode self);
uint32_t ts_node_end_byte(TSNode self);
TSPoint ts_node_end_point(TSNode self);
char *ts_node_string(TSNode self);
bool ts_node_is_null(TSNode self);
bool ts_node_is_named(TSNode self);
bool ts_node_is_missing(TSNode self);
bool ts_node_is_extra(TSNode self);
bool ts_node_has_changes(TSNode self);
bool ts_node_has_error(TSNode self);
bool ts_node_is_error(TSNode self);
TSStateId ts_node_parse_state(TSNode self);
TSStateId ts_node_next_parse_state(TSNode self);
TSNode ts_node_parent(TSNode self);
TSNode ts_node_child_with_descendant(TSNode self, TSNode descendant);
TSNode ts_node_child(TSNode self, uint32_t child_index);
const char *ts_node_field_name_for_child(TSNode self, uint32_t child_index);
const char *ts_node_field_name_for_named_child(TSNode self,
                                               uint32_t named_child_index);
uint32_t ts_node_child_count(TSNode self);
TSNode ts_node_named_child(TSNode self, uint32_t child_index);
uint32_t ts_node_named_child_count(TSNode self);
TSNode ts_node_child_by_field_name(TSNode self, const char *name,
                                   uint32_t name_length);
TSNode ts_node_child_by_field_id(TSNode self, TSFieldId field_id);
TSNode ts_node_next_sibling(TSNode self);
TSNode ts_node_prev_sibling(TSNode self);
TSNode ts_node_next_named_sibling(TSNode self);
TSNode ts_node_prev_named_sibling(TSNode self);
TSNode ts_node_first_child_for_byte(TSNode self, uint32_t byte);
TSNode ts_node_first_named_child_for_byte(TSNode self, uint32_t byte);
uint32_t ts_node_descendant_count(TSNode self);
TSNode ts_node_descendant_for_byte_range(TSNode self, uint32_t start,
                                         uint32_t end);
TSNode ts_node_descendant_for_point_range(TSNode self, TSPoint start,
                                          TSPoint end);
TSNode ts_node_named_descendant_for_byte_range(TSNode self, uint32_t start,
                                               uint32_t end);
TSNode ts_node_named_descendant_for_point_range(TSNode self, TSPoint start,
                                                TSPoint end);