src/ts_api/treesitter.zig


pub const TSStateId = u16;
pub const TSSymbol = u16;
pub const TSFieldId = u16;
pub const struct_TSLanguage = opaque {};
pub const TSLanguage = struct_TSLanguage;
pub const struct_TSParser = opaque {};
pub const TSParser = struct_TSParser;
pub const struct_TSTree = opaque {};
pub const TSTree = struct_TSTree;
pub const struct_TSQuery = opaque {};
pub const TSQuery = struct_TSQuery;
pub const struct_TSQueryCursor = opaque {};
pub const TSQueryCursor = struct_TSQueryCursor;
pub const struct_TSLookaheadIterator = opaque {};
pub const TSLookaheadIterator = struct_TSLookaheadIterator;
pub const DecodeFunction = ?*const fn ([*c]const u8, u32, [*c]i32) callconv(.c) u32;
pub const TSInputEncodingUTF8: c_int = 0;
pub const TSInputEncodingUTF16LE: c_int = 1;
pub const TSInputEncodingUTF16BE: c_int = 2;
pub const TSInputEncodingCustom: c_int = 3;
pub const enum_TSInputEncoding = c_uint;
pub const TSInputEncoding = enum_TSInputEncoding;
pub const TSSymbolTypeRegular: c_int = 0;
pub const TSSymbolTypeAnonymous: c_int = 1;
pub const TSSymbolTypeSupertype: c_int = 2;
pub const TSSymbolTypeAuxiliary: c_int = 3;
pub const enum_TSSymbolType = c_uint;
pub const TSSymbolType = enum_TSSymbolType;
pub const struct_TSPoint = extern struct {
    row: u32 = @import("std").mem.zeroes(u32),
    column: u32 = @import("std").mem.zeroes(u32),
};
pub const TSPoint = struct_TSPoint;
pub const struct_TSRange = extern struct {
    start_point: TSPoint = @import("std").mem.zeroes(TSPoint),
    end_point: TSPoint = @import("std").mem.zeroes(TSPoint),
    start_byte: u32 = @import("std").mem.zeroes(u32),
    end_byte: u32 = @import("std").mem.zeroes(u32),
};
pub const TSRange = struct_TSRange;
pub const struct_TSInput = extern struct {
    payload: ?*anyopaque = @import("std").mem.zeroes(?*anyopaque),
    read: ?*const fn (?*anyopaque, u32, TSPoint, [*c]u32) callconv(.c) [*c]const u8 = @import("std").mem.zeroes(?*const fn (?*anyopaque, u32, TSPoint, [*c]u32) callconv(.c) [*c]const u8),
    encoding: TSInputEncoding = @import("std").mem.zeroes(TSInputEncoding),
    decode: DecodeFunction = @import("std").mem.zeroes(DecodeFunction),
};
pub const TSInput = struct_TSInput;
pub const struct_TSParseState = extern struct {
    payload: ?*anyopaque = @import("std").mem.zeroes(?*anyopaque),
    current_byte_offset: u32 = @import("std").mem.zeroes(u32),
    has_error: bool = @import("std").mem.zeroes(bool),
};
pub const TSParseState = struct_TSParseState;
pub const struct_TSParseOptions = extern struct {
    payload: ?*anyopaque = @import("std").mem.zeroes(?*anyopaque),
    progress_callback: ?*const fn ([*c]TSParseState) callconv(.c) bool = @import("std").mem.zeroes(?*const fn ([*c]TSParseState) callconv(.c) bool),
};
pub const TSParseOptions = struct_TSParseOptions;
pub const TSLogTypeParse: c_int = 0;
pub const TSLogTypeLex: c_int = 1;
pub const enum_TSLogType = c_uint;
pub const TSLogType = enum_TSLogType;
pub const struct_TSLogger = extern struct {
    payload: ?*anyopaque = @import("std").mem.zeroes(?*anyopaque),
    log: ?*const fn (?*anyopaque, TSLogType, [*c]const u8) callconv(.c) void = @import("std").mem.zeroes(?*const fn (?*anyopaque, TSLogType, [*c]const u8) callconv(.c) void),
};
pub const TSLogger = struct_TSLogger;
pub const struct_TSInputEdit = extern struct {
    start_byte: u32 = @import("std").mem.zeroes(u32),
    old_end_byte: u32 = @import("std").mem.zeroes(u32),
    new_end_byte: u32 = @import("std").mem.zeroes(u32),
    start_point: TSPoint = @import("std").mem.zeroes(TSPoint),
    old_end_point: TSPoint = @import("std").mem.zeroes(TSPoint),
    new_end_point: TSPoint = @import("std").mem.zeroes(TSPoint),
};
pub const TSInputEdit = struct_TSInputEdit;
pub const struct_TSNode = extern struct {
    context: [4]u32 = @import("std").mem.zeroes([4]u32),
    id: ?*const anyopaque = @import("std").mem.zeroes(?*const anyopaque),
    tree: ?*const TSTree = @import("std").mem.zeroes(?*const TSTree),
};
pub const TSNode = struct_TSNode;
pub const struct_TSTreeCursor = extern struct {
    tree: ?*const anyopaque = @import("std").mem.zeroes(?*const anyopaque),
    id: ?*const anyopaque = @import("std").mem.zeroes(?*const anyopaque),
    context: [3]u32 = @import("std").mem.zeroes([3]u32),
};
pub const TSTreeCursor = struct_TSTreeCursor;
pub const struct_TSQueryCapture = extern struct {
    node: TSNode = @import("std").mem.zeroes(TSNode),
    index: u32 = @import("std").mem.zeroes(u32),
};
pub const TSQueryCapture = struct_TSQueryCapture;
pub const TSQuantifierZero: c_int = 0;
pub const TSQuantifierZeroOrOne: c_int = 1;
pub const TSQuantifierZeroOrMore: c_int = 2;
pub const TSQuantifierOne: c_int = 3;
pub const TSQuantifierOneOrMore: c_int = 4;
pub const enum_TSQuantifier = c_uint;
pub const TSQuantifier = enum_TSQuantifier;
pub const struct_TSQueryMatch = extern struct {
    id: u32 = @import("std").mem.zeroes(u32),
    pattern_index: u16 = @import("std").mem.zeroes(u16),
    capture_count: u16 = @import("std").mem.zeroes(u16),
    captures: [*c]const TSQueryCapture = @import("std").mem.zeroes([*c]const TSQueryCapture),
};
pub const TSQueryMatch = struct_TSQueryMatch;
pub const TSQueryPredicateStepTypeDone: c_int = 0;
pub const TSQueryPredicateStepTypeCapture: c_int = 1;
pub const TSQueryPredicateStepTypeString: c_int = 2;
pub const enum_TSQueryPredicateStepType = c_uint;
pub const TSQueryPredicateStepType = enum_TSQueryPredicateStepType;
pub const struct_TSQueryPredicateStep = extern struct {
    type: TSQueryPredicateStepType = @import("std").mem.zeroes(TSQueryPredicateStepType),
    value_id: u32 = @import("std").mem.zeroes(u32),
};
pub const TSQueryPredicateStep = struct_TSQueryPredicateStep;
pub const TSQueryErrorNone: c_int = 0;
pub const TSQueryErrorSyntax: c_int = 1;
pub const TSQueryErrorNodeType: c_int = 2;
pub const TSQueryErrorField: c_int = 3;
pub const TSQueryErrorCapture: c_int = 4;
pub const TSQueryErrorStructure: c_int = 5;
pub const TSQueryErrorLanguage: c_int = 6;
pub const enum_TSQueryError = c_uint;
pub const TSQueryError = enum_TSQueryError;
pub const struct_TSQueryCursorState = extern struct {
    payload: ?*anyopaque = @import("std").mem.zeroes(?*anyopaque),
    current_byte_offset: u32 = @import("std").mem.zeroes(u32),
};
pub const TSQueryCursorState = struct_TSQueryCursorState;
pub const struct_TSQueryCursorOptions = extern struct {
    payload: ?*anyopaque = @import("std").mem.zeroes(?*anyopaque),
    progress_callback: ?*const fn ([*c]TSQueryCursorState) callconv(.c) bool = @import("std").mem.zeroes(?*const fn ([*c]TSQueryCursorState) callconv(.c) bool),
};
pub const TSQueryCursorOptions = struct_TSQueryCursorOptions;
pub const struct_TSLanguageMetadata = extern struct {
    major_version: u8 = @import("std").mem.zeroes(u8),
    minor_version: u8 = @import("std").mem.zeroes(u8),
    patch_version: u8 = @import("std").mem.zeroes(u8),
};
pub const TSLanguageMetadata = struct_TSLanguageMetadata;
pub extern fn ts_parser_new() ?*TSParser;
pub extern fn ts_parser_delete(self: ?*TSParser) void;
pub extern fn ts_parser_language(self: ?*const TSParser) ?*const TSLanguage;
pub extern fn ts_parser_set_language(self: ?*TSParser, language: ?*const TSLanguage) bool;
pub extern fn ts_parser_set_included_ranges(self: ?*TSParser, ranges: [*c]const TSRange, count: u32) bool;
pub extern fn ts_parser_included_ranges(self: ?*const TSParser, count: [*c]u32) [*c]const TSRange;
pub extern fn ts_parser_parse(self: ?*TSParser, old_tree: ?*const TSTree, input: TSInput) ?*TSTree;
pub extern fn ts_parser_parse_with_options(self: ?*TSParser, old_tree: ?*const TSTree, input: TSInput, parse_options: TSParseOptions) ?*TSTree;
pub extern fn ts_parser_parse_string(self: ?*TSParser, old_tree: ?*const TSTree, string: [*c]const u8, length: u32) ?*TSTree;
pub extern fn ts_parser_parse_string_encoding(self: ?*TSParser, old_tree: ?*const TSTree, string: [*c]const u8, length: u32, encoding: TSInputEncoding) ?*TSTree;
pub extern fn ts_parser_reset(self: ?*TSParser) void;
pub extern fn ts_parser_set_timeout_micros(self: ?*TSParser, timeout_micros: u64) void;
pub extern fn ts_parser_timeout_micros(self: ?*const TSParser) u64;
pub extern fn ts_parser_set_cancellation_flag(self: ?*TSParser, flag: [*c]const usize) void;
pub extern fn ts_parser_cancellation_flag(self: ?*const TSParser) [*c]const usize;
pub extern fn ts_parser_set_logger(self: ?*TSParser, logger: TSLogger) void;
pub extern fn ts_parser_logger(self: ?*const TSParser) TSLogger;
pub extern fn ts_parser_print_dot_graphs(self: ?*TSParser, fd: c_int) void;
pub extern fn ts_tree_copy(self: ?*const TSTree) ?*TSTree;
pub extern fn ts_tree_delete(self: ?*TSTree) void;
pub extern fn ts_tree_root_node(self: ?*const TSTree) TSNode;
pub extern fn ts_tree_root_node_with_offset(self: ?*const TSTree, offset_bytes: u32, offset_extent: TSPoint) TSNode;
pub extern fn ts_tree_language(self: ?*const TSTree) ?*const TSLanguage;
pub extern fn ts_tree_included_ranges(self: ?*const TSTree, length: [*c]u32) [*c]TSRange;
pub extern fn ts_tree_edit(self: ?*TSTree, edit: [*c]const TSInputEdit) void;
pub extern fn ts_tree_get_changed_ranges(old_tree: ?*const TSTree, new_tree: ?*const TSTree, length: [*c]u32) [*c]TSRange;
pub extern fn ts_tree_print_dot_graph(self: ?*const TSTree, file_descriptor: c_int) void;
pub extern fn ts_node_type(self: TSNode) [*c]const u8;
pub extern fn ts_node_symbol(self: TSNode) TSSymbol;
pub extern fn ts_node_language(self: TSNode) ?*const TSLanguage;
pub extern fn ts_node_grammar_type(self: TSNode) [*c]const u8;
pub extern fn ts_node_grammar_symbol(self: TSNode) TSSymbol;
pub extern fn ts_node_start_byte(self: TSNode) u32;
pub extern fn ts_node_start_point(self: TSNode) TSPoint;
pub extern fn ts_node_end_byte(self: TSNode) u32;
pub extern fn ts_node_end_point(self: TSNode) TSPoint;
pub extern fn ts_node_string(self: TSNode) [*c]u8;
pub extern fn ts_node_is_null(self: TSNode) bool;
pub extern fn ts_node_is_named(self: TSNode) bool;
pub extern fn ts_node_is_missing(self: TSNode) bool;
pub extern fn ts_node_is_extra(self: TSNode) bool;
pub extern fn ts_node_has_changes(self: TSNode) bool;
pub extern fn ts_node_has_error(self: TSNode) bool;
pub extern fn ts_node_is_error(self: TSNode) bool;
pub extern fn ts_node_parse_state(self: TSNode) TSStateId;
pub extern fn ts_node_next_parse_state(self: TSNode) TSStateId;
pub extern fn ts_node_parent(self: TSNode) TSNode;
pub extern fn ts_node_child_with_descendant(self: TSNode, descendant: TSNode) TSNode;
pub extern fn ts_node_child(self: TSNode, child_index: u32) TSNode;
pub extern fn ts_node_field_name_for_child(self: TSNode, child_index: u32) [*c]const u8;
pub extern fn ts_node_field_name_for_named_child(self: TSNode, named_child_index: u32) [*c]const u8;
pub extern fn ts_node_child_count(self: TSNode) u32;
pub extern fn ts_node_named_child(self: TSNode, child_index: u32) TSNode;
pub extern fn ts_node_named_child_count(self: TSNode) u32;
pub extern fn ts_node_child_by_field_name(self: TSNode, name: [*c]const u8, name_length: u32) TSNode;
pub extern fn ts_node_child_by_field_id(self: TSNode, field_id: TSFieldId) TSNode;
pub extern fn ts_node_next_sibling(self: TSNode) TSNode;
pub extern fn ts_node_prev_sibling(self: TSNode) TSNode;
pub extern fn ts_node_next_named_sibling(self: TSNode) TSNode;
pub extern fn ts_node_prev_named_sibling(self: TSNode) TSNode;
pub extern fn ts_node_first_child_for_byte(self: TSNode, byte: u32) TSNode;
pub extern fn ts_node_first_named_child_for_byte(self: TSNode, byte: u32) TSNode;
pub extern fn ts_node_descendant_count(self: TSNode) u32;
pub extern fn ts_node_descendant_for_byte_range(self: TSNode, start: u32, end: u32) TSNode;
pub extern fn ts_node_descendant_for_point_range(self: TSNode, start: TSPoint, end: TSPoint) TSNode;
pub extern fn ts_node_named_descendant_for_byte_range(self: TSNode, start: u32, end: u32) TSNode;
pub extern fn ts_node_named_descendant_for_point_range(self: TSNode, start: TSPoint, end: TSPoint) TSNode;
